update : murid(by id, fix bug), tentor(by id, fix bug), kelas(by id, delete permanen, fix bug), enroll(fix bug)
