# src/routes/kelas.js
@@ -4,11 +4,13 @@ const auth = require("../middleware/auth");
 
 // Pastikan kelasCtrl.getAll (bukan getAllKelas)
 router.get("/", kelasCtrl.getAll);
+router.get("/:id", auth, kelasCtrl.getById);
 router.post("/", auth, kelasCtrl.store);
 router.put("/:id", auth, kelasCtrl.update);
+router.delete("/:id", auth, kelasCtrl.delete);
 
+router.get("/:id/anggota", kelasCtrl.getAnggota);
 router.post("/enroll", auth, kelasCtrl.enroll);
 router.delete("/unenroll", auth, kelasCtrl.unenroll);
-router.get("/:id/anggota", kelasCtrl.getAnggota);
 
 module.exports = router;
